# chisel

./: .gitignore  Cargo.toml  project.yml
Chisel/: Chisel.entitlements  Info.plist
Chisel.xcodeproj/: project.pbxproj
Chisel.xcodeproj/project.xcworkspace/xcuserdata/meh.xcuserdatad/: UserInterfaceState.xcuserstate
Chisel.xcodeproj/xcuserdata/meh.xcuserdatad/xcschemes/: xcschememanagement.plist
Chisel/App/: AppDelegate.swift  ChiselApp.swift
Chisel/Models/: AppState.swift
Chisel/Services/: ExtensionManager.swift  FilterManager.swift  ScheduleEngine.swift
Chisel/Views/: MenuBarView.swift  SetupWizardView.swift
ChiselFilter/: ChiselFilter.entitlements  FilterDataProvider.swift  Info.plist
ChiselShared/: Constants.swift  IPCProtocol.swift  ProcessList.swift  ScheduleEvaluator.swift  SharedConfig.swift
agent-chats/: initial.md
src/: cli.rs  config.rs  display.rs  main.rs  privilege.rs  schedule.rs  state.rs  tamper.rs  tools.rs  wizard.rs
src/blocker/: dns.rs  firewall.rs  hosts.rs  mod.rs
