[package]
name = "chisel"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
colored = "3"
console = "0.15"
indicatif = "0.17"
inquire = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
